--- a/index.html
+++ b/index.html
@@ -11,13 +11,23 @@
             padding: 0;
         }
         header {
-            background-color: #333;
             color: #fff;
             padding: 20px;
             text-align: center;
+            background: linear-gradient(to right, #036d1c 50%, #030887 50%);
+            background-size: 200% 100%;
+            animation: gradientAnimation 5s linear infinite;
+        }
+        @keyframes gradientAnimation {
+            0% {
+                background-position: 100% 0;
+            }
+            100% {
+                background-position: -100% 0;
+            }
         }
         nav {
-            background-color: #666;
+            background-color: #079b09;
             padding: 10px;
             text-align: center;
         }
@@ -33,6 +43,16 @@
             padding: 20px;
             text-align: center;
         }
+        .component {
+            margin: 20px;
+            text-align: left; /* Align text to the left */
+            border: 1px solid #ccc; /* Add border for separation */
+            padding: 20px; /* Add padding for breathing space */
+        }
+        .component img {
+            display: block; /* Center the image */
+            margin: 0 auto 15px; /* Center the image and add some space below */
+        }
         footer {
             background-color: #333;
             color: #fff;
@@ -42,79 +62,67 @@
             bottom: 0;
             width: 100%;
         }
-        .component {
-            display: inline-block;
-            margin: 20px;
-        }
     </style>
 </head>
 <body>
     <header>
         <h1>Welcome to My Website</h1>
-        <p>Radzni R. Hassan</p>
-        <p>BSIT2-B2</p>
+        <p>Radzni R. Hassan BSIT2-B2</p>
         <p>Fundamentals in Electronics</p>
     </header>
     <nav>
         <a href="#">Home</a>
     </nav>
     <section>
-        <h2>About Us</h2>
+        <h2>Basic Components</h2>
         <div class="component">
-            <img src="resistor.png" alt="Resistor" width="150">
-            <p>Resistor</p>
+            <img src="resistor.png" alt="Resistor" width="200">
+            <h3>Resistor</h3>
             <p>A resistor is a passive two-terminal electrical component that implements electrical resistance as a circuit element. Resistors act to reduce current flow, and, at the same time, act to lower voltage levels within circuits.</p>
         </div>
         <div class="component">
-            <img src="capacitor.png" alt="Capacitor" width="150">
-            <p>Capacitor</p>
+            <img src="capacitor.png" alt="Capacitor" width="200">
+            <h3>Capacitor</h3>
             <p>A capacitor is a passive two-terminal electronic component that stores electrical energy in an electric field. It is typically used to store charge temporarily, to power the load when required, and to smooth out voltage fluctuations in power supplies.</p>
         </div>
         <div class="component">
-            <img src="r.png" alt="LED" width="150">
-            <p>LED</p>
+            <img src="r.png" alt="LED" width="200">
+            <h3>LED</h3>
             <p>An LED (light-emitting diode) is a semiconductor light source that emits light when current flows through it. LEDs are used in various applications, including indicators, lighting, and displays.</p>
         </div>
         <div class="component">
-            <img src="inductor.png" alt="Inductor" width="150">
-            <p>Inductor</p>
+            <img src="inductor.png" alt="Inductor" width="200">
+            <h3>Inductor</h3>
             <p>An inductor, also called a coil or reactor, is a passive two-terminal electrical component that stores energy in a magnetic field when electric current flows through it.</p>
         </div>
         <div class="component">
             <img src="diode.png" alt="Diode" width="300">
-            <p>Diode</p>
+            <h3>Diode</h3>
             <p>A diode is a two-terminal electronic component that allows current to flow in one direction only. It acts as a one-way valve for electrical current and is commonly used for rectification, voltage regulation, and signal demodulation.</p>
         </div>
         <div class="component">
-            <img src="transistor.png" alt="Transistor" width="150">
-            <p>Transistor</p>
+            <img src="transistor.png" alt="Transistor" width="200">
+            <h3>Transistor</h3>
             <p>A transistor is a semiconductor device used to amplify or switch electronic signals and electrical power. It can be configured in various ways to perform functions such as amplification, switching, voltage regulation, and signal modulation.</p>
         </div>
         <div class="component">
             <img src="potentiometer.png" alt="Potentiometer" width="300">
-            <p>Potentiometer</p>
+            <h3>Potentiometer</h3>
             <p>A potentiometer, also known as a variable resistor or pot, is a three-terminal resistor with a sliding or rotating contact that allows adjustment of resistance. It is used for volume control, voltage regulation, and tuning in electronic circuits.</p>
         </div>
         <div class="component">
-            <img src="transformer.png" alt="Transformer" width="150">
-            <p>Transformer</p>
+            <img src="transformer.png" alt="Transformer" width="200">
+            <h3>Transformer</h3>
             <p>A transformer is an electrical device that transfers electrical energy between two or more circuits through electromagnetic induction. It is used to step up or step down voltage levels, isolate circuits, and match impedance between components.</p>
         </div>
         <div class="component">
             <img src="symbols.png" alt="Symbols" width="500">
-            <p>Symbols</p>
+            <h3>Symbols</h3>
             <p>In electronics, various symbols are used to represent components and circuits in schematic diagrams. These symbols help engineers and technicians understand and analyze electronic circuits.</p>
         </div>
     </section>
     <footer>
         &copy; 2024 My Website. All rights reserved.
     </footer>
-
-    <script>
-        function showContact() {
-            var contactSection = document.getElementById("contact");
-            contactSection.style.display = "block";
-        }
-    </script>
 </body>
 </html>
